# pyalex

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  EMBEDDINGS_IMPLEMENTATION.md  EVALUATION_PLAN.md  GEMINI.md  Makefile  PLAN.md  README.md  REVIEW.md  TODO.md  TWO_LEVEL_ASYNC_IMPLEMENTATION.md  TYPING_INTEGRATION.md  demo.ipynb  final_integration_test.py  main.py  mkdocs.yml  network.graphml  pixi.toml  pyproject.toml  test_async_pagination.py  test_authors.jsonl  test_formatter_widths.py  test_institutions.jsonl  test_network_with_author_embeddings.graphml  test_output.graphml  test_read_graphml.graphml  test_rich_progress.py  test_works.jsonl  test_works_institutions.jsonl  workflow.md
.github/: prompts
docs/: README.md  api_cli_parity.md  embeddings.md  index.md  troubleshooting.md
docs/api/: exceptions.md  typing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
examples/: CLI_EXAMPLES.md  Makefile  Makefile.institution_topic  Makefile.pdf_download  README.md  advanced_filtering.py  api_cli_parity.py  async_usage.py  au.jsonl  basic_usage.py  batch_operations.py  cli_demo.py  dataframe_output.py  pagination_examples.py  streamlit_example.py  typing_example.py
examples/how_does_topic_of_arc_funded_projects_evolve/: Makefile
examples/how_does_topics_of_australia_funded_works_evolve/: Makefile  plotting.py
examples/what_topic_does_AU_funders_fund_in_2025/: Makefile  funded_topics.json  funders.json  notebook.ipynb
examples/what_topic_does_top100_australian_funders_fund/: Makefile  au_funders.json  funded_works.json  funders.json
experiments/: README.md  TODO.md  aggregations.py  collaboration_prediction.py  evaluator.py  graph_utils.py  metrics.py  pipeline.py  visualisation.py
experiments/datasets/: README.md
pyalex/: __init__.py  __main__.py  api.py  cli.py  cli_original.py  exceptions.py  logger.py  utils.py
pyalex/agents/: PLAN.md  __init__.py  draw_taxonomy.py  embeddings.py  landscaping.py  results.pkl  taxonomy.py  taxonomy_tree.txt
pyalex/cli/: __init__.py  batch.py  command_patterns.py  constants.py  formatters.py  formatting.py  main.py  state.py  utils.py  validation.py
pyalex/client/: __init__.py  async_session.py  auth.py  httpx_session.py  session.py
pyalex/core/: TODO.md  __init__.py  config.py  entity_detection.py  expressions.py  pagination.py  query.py  response.py  utils.py
pyalex/embeddings/: README.md  __init__.py  atlas.py  embed.py  generator.py  pipeline.py  streamlit.py  trajectory.py  utils.py
pyalex/entities/: __init__.py  authors.py  autocomplete.py  base.py  concepts.py  domains.py  fields.py  funders.py  institutions.py  keywords.py  publishers.py  sources.py  subfields.py  topics.py  works.py
pyalex/examples/: Makefile
pyalex/mcp/: __init__.py  server.py
pyalex/models/: author.py  (+12 more)
test_dir/: file1.jsonl
tests/: test_agents_landscaping.py  test_api.py  test_async.py  test_async_retry.py  test_cli.py  test_cli_date_relative.py  test_cli_utils.py  test_core_utils.py  test_embeddings.py  test_embeddings_generator.py  test_entity_patterns.py  test_expand_year.py  test_from_ids_async.py  test_http_error_handling.py  test_mcp_server.py  test_oa_ranking.py  test_pagination_helpers.py  test_pyalex.py  test_taxonomy_graph.py  test_validation.py
(+58 files in other folders)
