[project]
name = "pyalex"
description = "Python interface to the OpenAlex database"
authors = [
    { name = "Jonathan de Bruin", email = "jonathandebruinos@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
license = {text = "MIT"}
dependencies = [
    "typer",
    "prettytable",
    "rich",
    "httpx[http2]>=0.28.1",
    "jupyter>=1.1.1",
    "python-dotenv>=0.19.0",
    "mkdocstrings[python]>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "markdown-include>=0.8.1",
    "mkdocs-material>=9.6.22",
    "embedding-atlas>=0.10.0",
    "anywidget>=0.9.18",
    "pydantic>=2.0.0",
]
dynamic = ["version"]
requires-python = ">=3.10"

[project.scripts]
pyalex = "pyalex.cli:app"

[project.optional-dependencies]
dataframe = ["pandas>=1.0.0"]
lint = ["ruff"]
test = ["pytest", "pytest-xdist", "dotenv"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["pyalex"]

[tool.setuptools_scm]
write_to = "pyalex/_version.py"

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "B"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v -W error --ignore=tests/slow"
